tests/failing/1-misnamed_arg/main.af
str: @str

foo: (a: str, b: str){
    @write(a, @exit(0))
}
main: () {
    foo(b: "world", c: "hello")
}
